--- a/src/index.scss
+++ b/src/index.scss
@@ -13,6 +13,7 @@ $accent3:#E249C6;
     padding: 0px;
     box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
+    color: $white;
 }
 
 body,html{
@@ -65,45 +66,171 @@ button{
     font-weight: 500;
 }
 
-.portfolio__section{}
+.hero__section{
+    img{
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+    }
+}
 
 .personal-info__section{
-    display: flex;
     background: $black;
-    padding: 60px 60px 0px 60px;
+    position: relative;
     color: white;
-    gap:20px;
-    .personal-info__aside{
+    .background-image{
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        position: absolute;
+    }
+    main{
+        padding: 60px 60px 0px 60px;
+        width: 100%;
         display: flex;
-        flex-direction: column;
-        justify-content: space-between;
-        padding-bottom: 60px;
-        width: 245px;
-        .main-personal-info-container{
-            display: flex;
-            flex-direction: column;
-            gap:10px;
+        gap:20px;
+        aside{
+            max-width: 245px;
+            width: 100%;
+            position: relative;
         }
-        .social-icons-container{
+        .personal-info__aside{
             display: flex;
             flex-direction: column;
-            gap:40px;
-            svg{
-                max-width: 40px;
-                &:hover{
-                    transition: 0.3s ease;
-                    fill: $accent;
+            justify-content: space-between;
+            padding-bottom: 60px;
+            .main-personal-info-container{
+                display: flex;
+                flex-direction: column;
+                gap:10px;
+            }
+            .social-icons-container{
+                display: flex;
+                flex-direction: column;
+                gap:15px;
+                svg{
+                    max-width: 40px;
+                    &:hover{
+                        transition: 0.3s ease;
+                        fill: $accent;
+                    }
+                }
+            }
+            .social-media-links-container{
+                display: flex;
+                flex-direction: column;
+                gap:10px;
+                .selected-link{
+                    padding: 10px;
+                    border: 2px solid white;
                 }
             }
         }
-        .social-media-links-container{
+        .profile-photo-container{
             display: flex;
             flex-direction: column;
-            gap:10px;
-            .selected-link{
-                padding: 10px;
-                border: 2px solid white;
+            justify-content: flex-end;
+            align-items: center;
+            flex-grow: 1;
+            position: relative;
+            padding: 30px 0px;
+            img{
+                position: absolute;
+                width: 100%;
+                height: 100%;
+                object-fit:contain;
             }
+        }
+        .career__aside{
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            gap:10px;
+            align-items: flex-end;
+            h1{
+                text-align: center;
+            }
+            .proceed-bar{
+                display: flex;
+                align-items: center;
+                flex-direction: column;
+                justify-content: center;
+                button{
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    width: 40px;
+                    height: 40px;
+                    border-radius: 50%;
+                    border: 1px solid $white;
+                    background: $white;
+                    color: $black;
+                    transition: 1s ease;
+                    &:hover{
+                        background-color: $accent;
+                        color: $white;
+                        transition: 0.4s ease !important;
+                        border:1px solid $accent
+                    }
+                }
+                .line{
+                    width: 5px;
+                    height: 200px;
+                    background-color: $white;
+                    transition: 1s ease;
+                }
+                button,.line{
+                    box-shadow: 2px 2px 6px 0px rgba(0, 0, 0, 0.05);
+                }
+                .completed{
+                    background: red;
+                    color:$white;
+                }
+            }
+        }
+    }
+}
+
+.personal-info-small__section{
+    background: $black;
+    position: relative;
+    color: white;
+    display: none;
+    flex-direction: column;
+    padding: 40px;
+    width: 100%;
+    gap:20px;
+    .background-image{
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        position: absolute;
+    }
+    .personal-info-container{
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        gap:20px;
+        padding-bottom: 20px;
+    }
+    .social-icons-container{
+        display: flex;
+        gap:15px;
+        svg{
+            width: 40px;
+            &:hover{
+                transition: 0.3s ease;
+                fill: $accent;
+            }
+        }
+    }
+    .social-media-links-container{
+        display: flex;
+        flex-direction: column;
+        gap:10px;
+        .selected-link{
+            padding: 10px;
+            border: 2px solid white;
         }
     }
     .profile-photo-container{
@@ -113,60 +240,49 @@ button{
         align-items: center;
         flex-grow: 1;
         position: relative;
-        padding: 30px 0px;
         img{
+            position: absolute;
             width: 100%;
             height: 100%;
             object-fit:contain;
         }
     }
-    .career__aside{
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        gap:10px;
-        .proceed-bar{
-            display: flex;
-            align-items: center;
-            flex-direction: column;
-            justify-content: center;
-            button{
+}
+
+.projects__section{
+    background-color: $black;
+    padding: 50px;
+    display: flex;
+    flex-direction: column;
+    h1{
+        margin: 50px 0px;
+    }
+    .project-card-grid{
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr 1fr;
+        column-gap: 40px;
+        .project-card{
+            border:1px solid $accent;
+            border-radius: 25px;
+            cursor: pointer;
+            transition: 0.3s ease;
+            img{
+                width: 100%;
+                object-fit: cover;
+                border-radius: 25px 25px;
+                max-height: 425px;
+            }
+            .description__container{
                 display: flex;
-                justify-content: center;
-                align-items: center;
-                width: 40px;
-                height: 40px;
-                border-radius: 50%;
-                border: 1px solid $white;
-                background: $white;
-                color: $black;
-                transition: 1s ease;
-                &:hover{
-                    background-color: $accent;
-                    color: $white;
-                    transition: 0.4s ease !important;
-                    border:1px solid $accent
-                }
+                flex-direction: column;
+                gap:45px;
+                padding: 20px;
             }
-            .line{
-                width: 5px;
-                height: 200px;
-                background-color: $white;
-                transition: 1s ease;
-            }
-            button,.line{
-                box-shadow: 2px 2px 6px 0px rgba(0, 0, 0, 0.05);
-            }
-            .completed{
-                background: red;
-                color:$white;
+            &:hover{
+                background-color: $accent2;
             }
         }
     }
-}
-
-.small-screen{
-    display: none;
 }
 
 .big-screen{
@@ -175,7 +291,6 @@ button{
 
 @media screen and (max-height:790px) {
     .personal-info__section{
-        background: linear-gradient(180deg, #393939 0%, #0B0B0B 100%) !important;
         .personal-info__aside{
             .social-icons-container{
                 gap:15px !important;
@@ -191,11 +306,19 @@ button{
             flex-direction: row !important;
         }
     }
-    .small-screen{
+    .personal-info-small__section{
         display: flex !important;
     }
     .big-screen{
         display: none !important;
+    }
+}
+
+@media screen and (max-width:1900px) {
+    .projects__section{
+        .project-card-grid{
+            grid-template-columns: 1fr 1fr 1fr !important;
+        }
     }
 }
 
